@@ -45,6 +45,9 @@ class AirbyteIntegrationTestJavaPlugin implements Plugin<Project> {
             maxHeapSize = '3g'
 
             mustRunAfter project.test
+
+            // This is needed to make the destination-snowflake tests succeed - https://github.com/snowflakedb/snowflake-jdbc/issues/589#issuecomment-983944767
+            jvmArgs = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
         }
 
         // make sure we create the integrationTest task once in case a standard source test was already initialized
